// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination on iOS renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 15,
          "paddingTop": 4,
        }
      }
      testID="results-message"
    >
      Showing 1 - 20 of 21 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
          testID="pagination-button-next"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders next link 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 15,
          "paddingTop": 4,
        }
      }
      testID="results-message"
    >
      Showing 1 - 20 of 41 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
          testID="pagination-button-next"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders prev and next link 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 15,
          "paddingTop": 4,
        }
      }
      testID="results-message"
    >
      Showing 21 - 40 of 41 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
          testID="pagination-button-previous"
        >
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginLeft": 10,
                "textAlign": "left",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Previous
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
          testID="pagination-button-next"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders prev link 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 15,
          "paddingTop": 4,
        }
      }
      testID="results-message"
    >
      Showing 41 - 41 of 41 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
          testID="pagination-button-previous"
        >
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginLeft": 10,
                "textAlign": "left",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Previous
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View />
  </View>
</View>
`;

exports[`Pagination on iOS renders results message 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 15,
          "paddingTop": 4,
        }
      }
      testID="results-message"
    >
      Showing 1 - 20 of 21 results
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
          testID="pagination-button-next"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Pagination on iOS renders with hidden results 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
      }
    }
  >
    <View />
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
          testID="pagination-button-next"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#006699",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
                "height": 15,
                "marginRight": 10,
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Next
            </Text>
          </Text>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </View>
      </View>
    </View>
  </View>
</View>
`;
